[Fix]- fix for styling

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -80,23 +80,19 @@
     <div class="carousel-item active">
       <img class="d-block w-100" src="../../assets/images/home-slide/cashew-slide-1.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Our cashews are sourced from the best farms, ensuring premium quality in every bite.</h5> -->
         <p><strong>Our cashews are sourced from the best farms, ensuring premium quality in every bite.</strong></p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../../assets/images/home-slide/cashew-slide-2.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Experience the rich, natural flavor of our cashews, perfect for snacking or adding to your favorite dishes.</h5> -->
-        <p><strong>Xperience the rich, natural flavor of our cashews, perfect for snacking or adding to your favorite dishes.</strong></p>
+        <p><strong>Experience the rich, natural flavor of our cashews, perfect for snacking or adding to your favorite dishes.</strong></p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../../assets/images/home-slide/cashew-slide-3.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Committed to freshness, we deliver cashews that are carefully processed and packed for your enjoyment.</h5> -->
         <p><strong>Committed to freshness, we deliver cashews that are carefully processed and packed for your enjoyment.</strong></p>
-        <!-- <p><strong>        <p><strong>புத்துணர்ச்சிக்கு அர்ப்பணிப்புடன், கவனமாக பதப்படுத்தப்பட்ட மற்றும் உங்கள் மகிழ்ச்சிக்காக பேக் செய்யப்பட்ட முந்திரியை நாங்கள் வழங்குகிறோம்.</strong></p></strong></p> -->
       </div>
     </div>
   </div>
@@ -109,6 +105,7 @@
     <span class="visually-hidden">Next</span>
   </a>
 </div>
+
 <div class="aboutTitle">
   <h3>About Cashew Bees</h3>
 </div>
