[Refactor] - adding header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
   <!-- <app-main-page>
   </app-main-page> -->
+  <!-- <app-header></app-header>  -->
   <router-outlet></router-outlet>
 </div>
