[Refactor] - added common footer for all pages.

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -74,9 +74,6 @@
       We are committed to delivering exceptional products and ensuring the
       highest standards of quality in every aspect of our business.
     </p>
-    <!-- <p>Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla luctus.
-        Fusce id mi diam, non ornare. 
-        Fusce id mi diam, non ornare orci. Pellentesque ipsum erat, facilisis ut venenatis eu.</p> -->
   </div>
   <!-- About Grid-2 End---------------------------------------------------- -->
 </section>
@@ -181,8 +178,7 @@
   </div>
 </div>
 <!-- Footer -->
-<footer class="footer">
-  <!-- <p>© Copyright Cashew Bees. All Rights Reserved.</p> -->
+<!-- <footer class="footer">
   <p>
     <span>© Copyright Cashew Bees</span>
     <img
@@ -192,4 +188,4 @@
     />
     <span>All Rights Reserved.</span>
   </p>
-</footer>
+</footer> -->
