[Fix] - Navigation issu fixes.

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,6 @@
+
+<!-- Main Content -->
+
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <ol class="carousel-indicators">
     <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
@@ -34,7 +37,7 @@
   </a>
 </div>
 
-<div class="aboutTitle">
+<div id="about" class="aboutTitle" #aboutSection>
   <h3>About Cashew Bees</h3>
 </div>
 <!-- About Starts-------------------------------------------------------------- -->
@@ -78,7 +81,7 @@
   <!-- About Grid-2 End---------------------------------------------------- -->
 </section>
 <!-- About End---------------------------------------------------- -->
-<div id="portfolio" class="portfolio-area area-padding fix">
+<div id="portfolio" class="portfolio-area area-padding fix" #productsSection>
   <div class="container">
     <!-- Section heading -->
     <div class="row">
@@ -159,7 +162,7 @@
   </div>
 </div>
 <!-- ======= Services Section ======= -->
-<div class="services-area area-padding">
+<div id="services" class="services-area area-padding">
   <div class="container">
     <div class="section-headline services-head text-center">
       <h2>Our Services</h2>
