--- a/src/app/shared/header.component.html
+++ b/src/app/shared/header.component.html
@@ -30,7 +30,7 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#ourproducts">Our Products</a></li>
+            <li><a href="#portfolio">Our Products</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#team">Team</a></li>
           </ul>
@@ -43,7 +43,7 @@
           <li><a class="nav-link p-button-text" href="#home">Home</a></li>
           <li><a class="nav-link p-button-text" href="#about">About</a></li>
           <li>
-            <a class="nav-link p-button-text" href="#ourproducts">our Products</a>
+            <a class="nav-link p-button-text" href="#portfolio">our Products</a>
           </li>
           <li><a class="nav-link p-button-text" href="#services">Services</a></li>
           <li><a class="nav-link p-button-text" href="#team">Team</a></li>
