[Fix] - navbar issue fixes.

--- a/src/app/shared/header.component.html
+++ b/src/app/shared/header.component.html
@@ -28,7 +28,7 @@
             <i class="fa fa-times" aria-hidden="true"></i>
           </button>
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#carouselExampleIndicators">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Our Products</a></li>
             <li><a href="#services">Services</a></li>
@@ -40,7 +40,7 @@
       <!-- Slider menubar End--------------------------------------------------  -->
       <div class="responsive">
         <ul class="home-menu">
-          <li><a class="nav-link p-button-text" href="#home">Home</a></li>
+          <li><a class="nav-link p-button-text" href="#carouselExampleIndicators">Home</a></li>
           <li><a class="nav-link p-button-text" href="#about">About</a></li>
           <li>
             <a class="nav-link p-button-text" href="#portfolio">our Products</a>
