[Refactor] - design and text changes.

--- a/src/app/kernals/kernals.component.html
+++ b/src/app/kernals/kernals.component.html
@@ -7,6 +7,7 @@
       src="../../assets/images/kernals/Kernal-Banner.jpg"
     />
   </ng-template>
+  <h2 class="text-container header">Cashew Kernals</h2>
   <div class="kernal-detsils">
     <p>
       We take pride in offering premium-grade cashew kernels, sourced and
@@ -35,7 +36,7 @@
     </div>
     <div class="text-container text-container-right">
       <h2>W400 Cashew Kernels</h2>
-      <br>
+      <br />
       <ul>
         <li>
           <strong>Size: </strong>Approximately 22 mm in length and 13 mm in
@@ -49,12 +50,16 @@
           compact, perfect for snacks or recipes where a fine texture is
           desired.
         </li>
-        <li><strong>Benefits: </strong>
-            <ul>
-                <li>Great for garnishing desserts and savory dishes.</li>
-                <li>Rich in healthy fats and protein, making them a quick energy booster.</li>
-                <li>Packed with antioxidants, supporting heart and skin health.</li>
-            </ul>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Great for garnishing desserts and savory dishes.</li>
+            <li>
+              Rich in healthy fats and protein, making them a quick energy
+              booster.
+            </li>
+            <li>Packed with antioxidants, supporting heart and skin health.</li>
+          </ul>
         </li>
       </ul>
     </div>
@@ -62,9 +67,12 @@
 </p-card>
 <p-card class="kernal-detsils">
   <div class="card-content">
-    <div class="text-container text-container-left">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/W320.jpg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
       <h2>W320 Cashew Kernels</h2>
-      <br>
+      <br />
       <ul>
         <li>
           <strong>Size: </strong>Approximately 23 mm in length and 15 mm in
@@ -77,17 +85,15 @@
           <strong>Description: </strong> W320 kernels are medium-sized, the most
           popular grade, and versatile for all types of culinary uses.
         </li>
-        <li><strong>Benefits: </strong>
-            <ul>
-                <li>Perfect for making cashew butter or rich gravies.</li>
-                <li>High in dietary fiber, aiding digestion.</li>
-                <li>A good source of plant-based iron and zinc.</li>
-            </ul>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Perfect for making cashew butter or rich gravies.</li>
+            <li>High in dietary fiber, aiding digestion.</li>
+            <li>A good source of plant-based iron and zinc.</li>
+          </ul>
         </li>
       </ul>
-    </div>
-    <div class="image-container image-right">
-      <img src="../../assets/images/kernals/W320.jpg" alt="Sample Image" />
     </div>
   </div>
 </p-card>
