--- a/src/app/kernals/kernals.component.css
+++ b/src/app/kernals/kernals.component.css
@@ -11,12 +11,15 @@
     padding: 1rem;
     box-sizing: border-box;
 }
-.text-container-left{
+
+.text-container-left {
     margin-left: 100px;
 }
-.text-container-right{
+
+.text-container-right {
     margin-right: 100px;
 }
+
 .image-left img {
     /* width: 100%;
     height: auto;
@@ -26,6 +29,7 @@
     height: 500px;
     display: block;
 }
+
 .image-right img {
     /* width: 100%;
     height: auto;
@@ -46,6 +50,12 @@
     margin: 0px 15px 50px;
 }
 
+.benifit {
+    list-style-type: none;
+}
+.header{
+    opacity: 0.9;
+}
 /* Media query for responsive scaling */
 @media (max-width: 768px) {
 
@@ -81,37 +91,51 @@
         display: block;
     } */
     .card-content {
-        flex-wrap: wrap; /* Allow stacking */
-        flex-direction: column; /* Stack items vertically */
-        align-items: center; /* Center align the items */
+        flex-wrap: wrap;
+        /* Allow stacking */
+        flex-direction: column;
+        /* Stack items vertically */
+        align-items: center;
+        /* Center align the items */
     }
 
     .image-container,
     .text-container {
-        flex: 1 1 100%; /* Full width for each item */
-        max-width: 100%; /* Full width for smaller screens */
-        padding: 0.5rem; /* Adjust padding for smaller layout */
+        flex: 1 1 100%;
+        /* Full width for each item */
+        max-width: 100%;
+        /* Full width for smaller screens */
+        padding: 0.5rem;
+        /* Adjust padding for smaller layout */
     }
 
     .text-container {
         font-size: smaller;
-        margin: 10px 0; /* Reduce margins for better spacing */
-        text-align: center; /* Center-align text for better readability */
+        margin: 10px 0;
+        /* Reduce margins for better spacing */
+        text-align: center;
+        /* Center-align text for better readability */
     }
-
+    .header{
+        font-size: medium !important;
+    }
     .text-container h2 {
         font-size: large;
     }
 
     .image-container img {
-        margin: 0 auto; /* Center the image */
-        width: 85%; /* Adjust width for smaller screens */
-        height: auto; /* Maintain aspect ratio */
+        margin: 0 auto;
+        /* Center the image */
+        width: 85%;
+        /* Adjust width for smaller screens */
+        height: auto;
+        /* Maintain aspect ratio */
     }
 
     .kernal-detsils {
-        font-size: medium;
-        margin: 15px 10px; /* Adjust margin for smaller screens */
+        font-size: small;
+        margin: 15px 25px;
+        /* Adjust margin for smaller screens */
     }
 
 }
