--- a/src/app/kernals/kernals.component.html
+++ b/src/app/kernals/kernals.component.html
@@ -37,6 +37,16 @@
     <div class="text-container text-container-right">
       <h2>W400 Cashew Kernels</h2>
       <br />
+      <p class="kernal-content">
+        The W400 grade is a smaller-sized, whole cashew known for its
+        non-damaged, non-split, white appearance. These nuts yield 400 pieces
+        per pound (approximately 880 pieces per kilogram) and are ideal for
+        cost-effective culinary uses. W400 cashews are cherished for their mild
+        flavor and versatility, making them a preferred choice for a wide range
+        of dishes. Stored in cool, dry, and hygienic conditions, they are packed
+        in food-safe materials and meet stringent quality standards to ensure
+        freshness and premium quality.
+      </p>
       <ul>
         <li>
           <strong>Size: </strong>Approximately 22 mm in length and 13 mm in
@@ -53,12 +63,11 @@
         <li class="benifit">
           <strong>Benefits: </strong>
           <ul>
-            <li>Great for garnishing desserts and savory dishes.</li>
+            <li>Ideal for roasting, cooking, and snacking.</li>
             <li>
-              Rich in healthy fats and protein, making them a quick energy
-              booster.
+              Loaded with essential minerals like magnesium and phosphorus.
             </li>
-            <li>Packed with antioxidants, supporting heart and skin health.</li>
+            <li>Supports brain health and helps reduce inflammation.</li>
           </ul>
         </li>
       </ul>
@@ -73,6 +82,17 @@
     <div class="text-container text-container-right">
       <h2>W320 Cashew Kernels</h2>
       <br />
+
+      <p class="kernal-content">
+        The W320 grade is a high-quality, regular-sized, whole cashew known for
+        its non-damaged, non-split, white appearance. These popular nuts yield
+        300–320 pieces per pound (approximately 660–706 pieces per kilogram) and
+        are recognized globally as Standard Large Nuts. Loved worldwide for
+        their balanced size, taste, and nutrition, W320 cashews are carefully
+        stored in dry, cool, and hygienic conditions to preserve their
+        freshness. Packed in food-safe materials, they meet stringent quality
+        and safety standards, ensuring premium organic cashews.
+      </p>
       <ul>
         <li>
           <strong>Size: </strong>Approximately 23 mm in length and 15 mm in
@@ -91,6 +111,296 @@
             <li>Perfect for making cashew butter or rich gravies.</li>
             <li>High in dietary fiber, aiding digestion.</li>
             <li>A good source of plant-based iron and zinc.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</p-card>
+<p-card class="kernal-detsils">
+  <div class="card-content">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/kernal-1.jpg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
+      <h2>W240 Cashew Kernels</h2>
+      <br />
+      <p class="kernal-content">
+        The W240 grade is a premium, large-sized whole cashew known for its
+        uniform shape, non-damaged, non-split, and white appearance. These nuts
+        yield 240 pieces per pound (approximately 528 pieces per kilogram) and
+        are globally renowned for their size, rich flavor, and nutritional
+        value. W240 cashews are stored in cool, dry, and hygienic conditions,
+        ensuring optimal freshness. They are carefully packed in food-safe
+        materials, adhering to stringent quality standards, making them an
+        excellent choice for both gourmet dishes and premium snacking.
+      </p>
+      <ul>
+        <li>
+          <strong>Size: </strong>Approximately 27 mm in length and 17 mm in
+          width.
+        </li>
+        <li>
+          <strong>Weight: </strong>Ranges from 1.86 to 2.30 grams per kernel.
+        </li>
+        <li>
+          <strong>Description: </strong> W240 kernels are large and premium
+          quality, offering a rich and creamy flavor.
+        </li>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Perfect for making cashew butter or rich gravies.</li>
+            <li>High in dietary fiber, aiding digestion.</li>
+            <li>A good source of plant-based iron and zinc.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</p-card>
+<p-card class="kernal-detsils">
+  <div class="card-content">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/kernal-3.jpg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
+      <h2>W210 Cashew Kernels</h2>
+      <br />
+      <p class="kernal-content">
+        The W210 grade is an extra-large, premium whole cashew known for its
+        smooth, white, and uniform appearance. These nuts yield 210 pieces per
+        pound (approximately 462 pieces per kilogram) and are considered "Jumbo
+        Nuts" due to their size and superior quality. W210 cashews are stored
+        under optimal conditions to retain freshness and are hygienically packed
+        in food-safe materials, adhering to the highest quality standards. They
+        are highly sought after for gourmet dishes and luxury snack options
+        worldwide.
+      </p>
+      <ul>
+        <li>
+          <strong>Size: </strong>Approximately 34 mm in length and 20 mm in
+          width.
+        </li>
+        <li>
+          <strong>Weight: </strong>Ranges from 2.84 to 3.28 grams per kernel.
+        </li>
+        <li>
+          <strong>Description: </strong> W210 kernels are extra-large, offering
+          the most luxurious experience with their size and taste.
+        </li>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Best for gifting and premium packaging.</li>
+            <li>
+              Boosts immunity due to its high concentration of vitamins and
+              minerals.
+            </li>
+            <li>
+              Supports healthy weight management by curbing hunger cravings.
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</p-card>
+<p-card class="kernal-detsils">
+  <div class="card-content">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/SW-400.jpeg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
+      <h2>SW400 Cashew Kernels</h2>
+      <br />
+      <p class="kernal-content">
+        The SW-400 grade (Scorched Wholes) consists of whole cashews that have
+        undergone a natural scorching process, resulting in a slightly darker
+        appearance while retaining their flavor and nutritional value. Known for
+        their affordability and excellent quality, SW-400 kernels are perfect
+        for cooking, baking, and snacking. These nuts yield approximately 400
+        pieces per pound (around 880 pieces per kilogram). They are carefully
+        stored and packed to ensure freshness, adhering to food safety
+        standards.
+      </p>
+      <ul>
+        <li>
+          <strong>Size: </strong>Approximately 22 mm in length and 13 mm in
+          width.
+        </li>
+        <li>
+          <strong>Weight: </strong>Ranges from 1.10 to 1.31 grams per kernel.
+        </li>
+        <li>
+          <strong>Description: </strong>SW-400 kernels are regular-sized,
+          naturally scorched whole cashews, offering great value for culinary
+          and snacking needs.
+        </li>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Ideal for cooking, roasting, and affordable snacking.</li>
+            <li>Contains healthy fats, protein, and essential minerals.</li>
+            <li>Boosts energy levels and supports overall health.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</p-card>
+<p-card class="kernal-detsils">
+  <div class="card-content">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/SW-320.jpeg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
+      <h2>SW320 Cashew Kernels</h2>
+      <br />
+      <p class="kernal-content">
+        The SW-320 grade (Scorched Wholes) features medium-sized cashews that
+        have been naturally scorched, giving them a slightly darker hue while
+        maintaining their rich taste and nutritional properties. With a count of
+        approximately 320 pieces per pound (about 704 pieces per kilogram),
+        these kernels are a perfect choice for cooking, baking, and snacking.
+        They are carefully stored in hygienic, food-safe packaging to preserve
+        freshness and meet high-quality standards.
+      </p>
+      <ul>
+        <li>
+          <strong>Size: </strong>Approximately 23 mm in length and 15 mm in
+          width.
+        </li>
+        <li>
+          <strong>Weight: </strong>Ranges from 1.63 to 1.97 grams per kernel.
+        </li>
+        <li>
+          <strong>Description: </strong>SW-320 kernels are medium-sized,
+          slightly scorched whole cashews, ideal for versatile culinary uses and
+          value-packed snacking.
+        </li>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Perfect for baking, cooking, and healthy snacking.</li>
+            <li>
+              Rich in antioxidants, healthy fats, and essential nutrients.
+            </li>
+            <li>Supports energy levels, brain health, and immunity.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</p-card>
+<p-card class="kernal-detsils">
+  <div class="card-content">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/SW-240.jpg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
+      <h2>SW240 Cashew Kernels</h2>
+      <br />
+      <p class="kernal-content">
+        The SW-240 grade (Scorched Wholes) represents premium large-sized
+        cashews with a slightly darker appearance due to the natural scorching
+        process. These kernels are known for their rich flavor and superior
+        quality, yielding approximately 240 pieces per pound (about 528 pieces
+        per kilogram). SW-240 cashews are carefully packed in hygienic,
+        food-safe packaging to maintain their freshness and meet stringent
+        quality standards, making them ideal for gourmet culinary uses and
+        premium snacking.
+      </p>
+      <ul>
+        <li>
+          <strong>Size: </strong>Approximately 27 mm in length and 17 mm in
+          width.
+        </li>
+        <li>
+          <strong>Weight: </strong>Ranges from 1.86 to 2.30 grams per kernel.
+        </li>
+        <li>
+          <strong>Description: </strong>SW-240 kernels are large, slightly
+          scorched whole cashews, perfect for high-end culinary applications,
+          gifting, and luxury snacking.
+        </li>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>Ideal for premium recipes, desserts, and gifting.</li>
+            <li>
+              Packed with healthy fats, vitamins, and minerals like magnesium
+              and phosphorus.
+            </li>
+            <li>
+              Enhances energy, supports heart health, and boosts overall
+              immunity.
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</p-card>
+<p-card class="kernal-detsils">
+  <div class="card-content">
+    <div class="image-container image-left">
+      <img src="../../assets/images/kernals/SSW.jpg" alt="Sample Image" />
+    </div>
+    <div class="text-container text-container-right">
+      <h2>SSW (Scorched Small Wholes) Cashew Kernels</h2>
+      <br />
+      <p class="kernal-content">
+        The SSW grade (Scorched Split Wholes) consists of cashew kernels that
+        are naturally scorched during processing and split into halves. These
+        kernels have a slightly darker appearance compared to white cashews,
+        with a golden-brown hue that reflects their scorched nature.  They are split into halves
+        but maintain a smooth surface and a clean, polished look. Despite the
+        split, they retain their full flavor, nutritional value, and rich
+        buttery texture, making them perfect for cost-effective culinary uses
+        and bulk applications.
+      </p>
+      <ul>
+        <!-- <li>
+          <strong>Appearance: </strong>SSW cashews are golden to light brown in
+          color due to the natural scorching process. They are split into halves
+          but maintain a smooth surface and a clean, polished look.
+        </li> -->
+        <li>
+          <strong>Size: </strong>Varies based on the split halves but generally
+          matches the dimensions of whole kernels from grades like SW-320 or
+          SW-400 when measured as a whole.
+        </li>
+        <li>
+          <strong>Weight: </strong>Approximately 0.80 to 1.15 grams per
+          half-kernel.
+        </li>
+        <li>
+          <strong>Description: </strong>SSW kernels are a cost-effective option
+          for recipes where the visual presentation of whole cashews is not
+          required, such as in granola, nut mixes, baking, or cooking. They
+          deliver the same nutritional and flavor profile as whole cashews,
+          making them a popular choice for economical yet high-quality
+          applications.
+        </li>
+        <li class="benifit">
+          <strong>Benefits: </strong>
+          <ul>
+            <li>
+              Ideal for baking, garnishing, and use in snacks or nut blends.
+            </li>
+            <li>
+              High in healthy fats, protein, and essential nutrients like
+              magnesium and zinc.
+            </li>
+            <li>
+              Supports heart health, improves energy levels, and promotes brain
+              function.
+            </li>
+            <!-- <li>
+              Affordable option for large-scale or commercial culinary
+              applications.
+            </li> -->
           </ul>
         </li>
       </ul>
