--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -180,6 +180,20 @@
     </div>
   </div>
 </div>
+<div class="video-container">
+  <video autoplay muted loop playsinline class="background-video">
+    <source src="../../assets/videos/Cashew-nuts.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+  <button
+    class="get-quote-button"
+    (click)="redirectToWhatsApp()"
+    aria-label="Get Quote"
+  >
+    Get Quote
+  </button>
+</div>
+
 <!-- Footer -->
 <!-- <footer class="footer">
   <p>
