Fix: image autoplay

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -182,9 +182,9 @@
 </div>
 <div class="video-container">
   <video autoplay muted loop playsinline class="background-video">
-    <source src="../../assets/videos/Cashew-nuts.mp4" type="video/mp4" />
+    <source src="assets/videos/Cashew-nuts.mp4" type="video/mp4" />
     Your browser does not support the video tag.
-  </video>
+  </video>  
   <button
     class="get-quote-button"
     (click)="redirectToWhatsApp()"
